--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "The repository contains the application to manage cache.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
